KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20081120a: Changes since 20081110a:
- Default: the default spool directory is now /var/spool/leafnode.
  If you'd been using /var/spool/news as the default, you may need to
  move the spool (renaming the directory is usually sufficient).
- Bugfix: Make fetchnews's -f and -S options mutually exclusive, to
  prevent corruption of active file. Patch by Robert Grimm.
- Development: the repository was changed to GIT format. This may not be
  the final decision, but let's try it for a while. http://git.or.cz/
  Currently, the official repositories are:
  http://developer.berlios.de/git/?group_id=448
  http://mandree.home.pages.de/leafnode/leafnode-2.git/

20081110a: Changes since 20080904a:
- Documentation: filterfile(5) now refers to pcrepattern(3) instead of
  pcre(3). It mentions that patterns are case sensitive and (?i) can be
  used for caseless matching.
- Documentation: the "bad weather" example in filters.example was fixed,
  and prominent notices added that it's not meant to be used as is were
  placed in that file, filterfile(5) and leafnode(8).
  Found and debugged by Manfred Lotz and Robert Grimm.
- u_char has been replaced by unsigned char, to fix compilation issues
  on some systems (MacOS X 10.5). Some longer strings (> 509 chars), in
  usage notices, have been split, to support older compilers.

20080904a: Changes since 20080624a:
- Feature/fix: fetchnews -S <server> can now be specified more than once, to
  query some servers. Patch courtesy of Robert Grimm <rob@robgri.de>.
- Feature/fix: fetchnews -S <server>:<:port> syntax now supported.
  Patch courtesy of Robert Grimm <rob@robgri.de>.

20080624a: Changes since 20070602a:
- Change: Improve logging of feedtype (when posting).

20070602a: Changes since 20070108a:
- Bugfix: applyfilter no longer refuses to run in dryrun mode.
  Reported by Clemens Fischer. Broken since 2005-01-05 when