@@ -1,6 +1,9 @@
 KNOWN BUGS:
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
+Changes since 20081120a:
+- Documentation: Improved the rnews(8) manual page.
+
 20081120a: Changes since 20081110a:
 - Default: the default spool directory is now /var/spool/leafnode.
   If you'd been using /var/spool/news as the default, you may need to
